@@ -7,8 +7,10 @@ INCLUDES = -I./iconv/include -I./libxml2/include -I./zlib/include
 LIBS = ./libxml2/lib/libxml2.lib ./zlib/lib/zdll.lib
 #LIBS = -lz -lxml2 -lpthread
 
-WARNINGS = -Wall -Wextra -Wformat=2 -Wshadow -Wcast-qual -Wwrite-strings -Wno-unused-variable
-#WARNINGS += -Wunreachable-code -Wconversion
+WARNINGS = -Wall -Wextra -Wformat=2 -Wshadow -Wcast-qual -Wwrite-strings -Wno-unused-variable -Wunreachable-code -Wno-shadow
+ifneq (,$(findstring clang,$(CC)))
+WARNINGS += -Weverything -Wno-padded -Wno-disabled-macro-expansion -Wno-sign-conversion -Wno-missing-prototypes -Wno-shorten-64-to-32 -Wno-documentation-unknown-command
+endif
 
 CFLAGS = $(WARNINGS) $(INCLUDES)
 
